--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
+    "date-fns": "^2.22.1",
+    "gray-matter": "^4.0.3",
     "next": "11.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "sass": "^1.35.2"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
