--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "animejs": "^3.2.1",
+    "axios": "^0.21.1",
+    "chalk": "^4.1.1",
+    "cowsay": "^1.5.0",
+    "http": "^0.0.1-security",
+    "inquirer": "^8.1.2",
+    "progress": "^2.0.3",
     "tailwindcss": "^2.2.4"
   }
 }
