--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "cowsay": "^1.5.0",
+    "foundation-sites": "^6.6.3",
     "http": "^0.0.1-security",
     "inquirer": "^8.1.2",
     "progress": "^2.0.3",
