--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "http": "^0.0.1-security",
     "inquirer": "^8.1.2",
     "progress": "^2.0.3",
+    "styled-components": "^5.3.0",
     "tailwindcss": "^2.2.4"
   }
 }
