Switch pure with tailwind

--- a/mywebsite/tsconfig.json
+++ b/mywebsite/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js", "server.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js", "server.js", "js/ui.js"],
   "exclude": ["node_modules"]
 }
