--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "foundation-sites": "^6.6.3",
     "http": "^0.0.1-security",
     "inquirer": "^8.1.2",
+    "milligram": "^1.4.1",
     "progress": "^2.0.3",
     "styled-components": "^5.3.0",
     "tailwindcss": "^2.2.4"
