--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "animejs": "^3.2.1",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "cowsay": "^1.5.0",
