--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "inquirer": "^8.1.2",
     "milligram": "^1.4.1",
     "progress": "^2.0.3",
+    "react-svg-bubble-slider": "^0.0.52",
     "styled-components": "^5.3.0",
     "tailwindcss": "^2.2.4"
   }
