--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.0.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.22.1",
