--- a/mywebsite/package.json
+++ b/mywebsite/package.json
@@ -6,6 +6,7 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
