--- a/package.json
+++ b/package.json
@@ -1,19 +1,38 @@
 {
+  "name": "mywebsite",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "animejs": "^3.2.1",
-    "aos": "^2.3.4",
-    "axios": "^0.21.1",
-    "chalk": "^4.1.1",
-    "cowsay": "^1.5.0",
-    "foundation-sites": "^6.6.3",
-    "http": "^0.0.1-security",
-    "inquirer": "^8.1.2",
-    "milligram": "^1.4.1",
-    "progress": "^2.0.3",
-    "react-svg-bubble-slider": "^0.0.52",
-    "styled-components": "^5.3.0",
-    "tailwindcss": "^2.2.4"
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.0.2",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.22.1",
+    "gray-matter": "^4.0.3",
+    "mongodb": "^4.0.0",
+    "next": "11.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "react": "17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "17.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "sass": "^1.35.2"
+  },
+  "devDependencies": {
+    "@types/react": "17.0.14",
+    "autoprefixer": "^10.3.1",
+    "eslint": "7.30.0",
+    "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
+    "typescript": "4.3.5"
   }
 }
